# kanvibe

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  boot.js  docker-compose.yml  electron-builder.yml  index.html  kanvibe.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  server.ts  start.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.codex/: config.toml
.codex/hooks/: kanvibe-notify-hook.sh
.github/workflows/: ci.yml
.husky/: pre-push
.serena/: project.yml
.serena/memories/: project-architecture.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
distribution/homebrew/: kanvibe.rb.template
docs/: CONTRIBUTING.ko.md  CONTRIBUTING.zh.md  README.ko.md  README.zh.md  nextron-bundled-db-homebrew-app.mdx
electron/: diagnostics.js  hookServer.js  main.js  preload.js
main/: background.ts  database.ts  preload.ts  updater.ts
main/helpers/: create-window.ts
messages/: en.json  ko.json  zh.json
prd/: design-system.json
resources/: icon.icns
scripts/: build-desktop-main.cjs  build-main.mjs  build-seed-db.ts  ensure-native-runtime.cjs  postinstall.cjs  run-desktop-dev.cjs  run-desktop-start.cjs  setup-claude-hooks.ts  verify-electron-better-sqlite3.cjs  verify-node-better-sqlite3.cjs
src/: preload.d.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/desktop/: index.html
src-tauri/src/: main.rs
src-tauri/src/backend/: board_snapshot.rs  contracts.rs  db.rs  mod.rs  projects.rs  settings.rs  terminal_sessions.rs  worktree.rs
(+351 files in other folders)
