[package]
name = "kanvibe-desktop"
version = "0.1.0"
description = "KanVibe desktop shell"
authors = ["KanVibe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
